add pending action
