# docs/swagger.json
@@ -201,6 +201,12 @@
                         "description": "Pagination key to fetch the next page of delegations",
                         "name": "pagination_key",
                         "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Filter by pending action",
+                        "name": "pending_action",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -885,27 +891,6 @@
                 }
             }
         },
-        "indexertypes.DelegationState": {
-            "type": "string",
-            "enum": [
-                "PENDING",
-                "VERIFIED",
-                "ACTIVE",
-                "UNBONDING",
-                "WITHDRAWABLE",
-                "WITHDRAWN",
-                "SLASHED"
-            ],
-            "x-enum-varnames": [
-                "StatePending",
-                "StateVerified",
-                "StateActive",
-                "StateUnbonding",
-                "StateWithdrawable",
-                "StateWithdrawn",
-                "StateSlashed"
-            ]
-        },
         "types.ErrorCode": {
             "type": "string",
             "enum": [
@@ -1205,8 +1190,17 @@
         "v2service.DelegationStaking": {
             "type": "object",
             "properties": {
+                "bbn_inception_height": {
+                    "type": "integer"
+                },
+                "bbn_inception_time": {
+                    "type": "integer"
+                },
                 "end_height": {
                     "type": "integer"
+                },
+                "slashing_tx_hex": {
+                    "type": "string"
                 },
                 "staking_amount": {
                     "type": "integer"
@@ -1233,6 +1227,9 @@
                     "items": {
                         "$ref": "#/definitions/v2service.CovenantSignature"
                     }
+                },
+                "slashing_tx_hex": {
+                    "type": "string"
                 },
                 "unbonding_time": {
                     "type": "integer"
@@ -1342,7 +1339,7 @@
                     "type": "string"
                 },
                 "state": {
-                    "$ref": "#/definitions/indexertypes.DelegationState"
+                    "$ref": "#/definitions/v2types.DelegationState"
                 }
             }
         },
@@ -1371,6 +1368,43 @@
                     "type": "integer"
                 }
             }
+        },
+        "v2types.DelegationState": {
+            "type": "string",
+            "enum": [
+                "PENDING",
+                "VERIFIED",
+                "ACTIVE",
+                "TIMELOCK_UNBONDING",
+                "EARLY_UNBONDING",
+                "TIMELOCK_WITHDRAWABLE",
+                "EARLY_UNBONDING_WITHDRAWABLE",
+                "TIMELOCK_SLASHING_WITHDRAWABLE",
+                "EARLY_UNBONDING_SLASHING_WITHDRAWABLE",
+                "TIMELOCK_WITHDRAWN",
+                "EARLY_UNBONDING_WITHDRAWN",
+                "TIMELOCK_SLASHING_WITHDRAWN",
+                "EARLY_UNBONDING_SLASHING_WITHDRAWN",
+                "TIMELOCK_SLASHED",
+                "EARLY_UNBONDING_SLASHED"
+            ],
+            "x-enum-varnames": [
+                "StatePending",
+                "StateVerified",
+                "StateActive",
+                "StateTimelockUnbonding",
+                "StateEarlyUnbonding",
+                "StateTimelockWithdrawable",
+                "StateEarlyUnbondingWithdrawable",
+                "StateTimelockSlashingWithdrawable",
+                "StateEarlyUnbondingSlashingWithdrawable",
+                "StateTimelockWithdrawn",
+                "StateEarlyUnbondingWithdrawn",
+                "StateTimelockSlashingWithdrawn",
+                "StateEarlyUnbondingSlashingWithdrawn",
+                "StateTimelockSlashed",
+                "StateEarlyUnbondingSlashed"
+            ]
         }
     }
 }
